# Blackjack-Solana

./: PROJECT_DESCRIPTION.md  README.md
anchor_project/: Anchor.toml  Cargo.toml  package-lock.json  package.json
anchor_project/programs/anchor-prog/: Cargo.toml
anchor_project/programs/anchor-prog/src/: errors.rs  lib.rs  logic.rs  states.rs
anchor_project/programs/anchor-prog/src/instructions/: dealer_act.rs  dev_fulfill.rs  init_table.rs  mod.rs  new_game.rs  player_act.rs  settle.rs
anchor_project/scripts/: initTable.ts  showVault.ts
anchor_project/tests/: anchor-prog.ts
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/games/: page.tsx
frontend/src/components/: app-footer.tsx  app-header.tsx  app-hero.tsx  app-layout.tsx  app-providers.tsx  bet-chips.tsx
frontend/src/components/account/: account-detail-feature.tsx  account-list-feature.tsx  account-ui.tsx
frontend/src/components/dashboard/: dashboard-feature.tsx
frontend/src/components/games/: BetChips.tsx  BetCircle.tsx  BetEditor.tsx  CardHand.tsx  CasinoTable.tsx  ChipRail.tsx  Chips.tsx  GamePanel.tsx  OutcomeBanner.tsx  PlayingCard.tsx  StartGameForm.tsx  StatusPill.tsx  TableSurface.tsx
frontend/src/components/ui/: shimmer-button.tsx
frontend/src/idl/: anchor_prog.json
frontend/src/lib/: cards.ts  constants.ts  pdas.ts  random.ts  useProgram.ts
frontend/src/lib/actions/: blackjack.ts
frontend/src/polyfills/: bigint-json.ts
frontend/src/types/: anchor_prog.ts
(+4 files in other folders)
